# Parser

./: .env  .gitignore  Dockerfile  Dockerfile_celery  Dockerfile_parser  Makefile  alembic.ini  architecture.txt  asunc_library.json  async_parser.py  celery_config.py  celery_main.py  celery_tasks.py  celeryconfig.py  db_config.py  db_worker.py  docker-compose.yml  library.json  load_file.txt  main.py  main_async.py  parser.py  parser_api.py  pyproject.toml  read_page.json  requirements.txt  result_lib  result_lib.json  start.sh  tasks.py  test.py  test_api.py  test_request.py  thread_library.json  thread_main.py
FastAPI/: Dockerfile  parser_api.py  repository.py
FastAPI/templates/: books.html
alembic/: env.py
alembic/versions/: 2024_04_30_1748-ddd4222177e1_.py
celery_worker/: Dockerfile  Makefile  core.py  tasks.py
celery_worker/config/: celery_configs.py
database/: core.py  models.py  repository.py
k8s/: configmap.yaml  ingress.yaml  minikube_start.txt  secret.yaml
k8s/deployments/: celery_deployment.yaml  fastapi_deployment.yaml  mysql_deployment.yaml  phpmyadmin_deployment.yaml  rabbitmq_deployment.yaml  redis_deployment.yaml
k8s/hpa/: celery_hpa.yaml  fastapi_hpa.yaml  mysql_hpa.yaml
k8s/services/: celery_service.yaml  fastapi_service.yaml  mysql_service.yaml  phpmyadmin_service.yaml  rabbitmq_service.yaml  redis_service.yaml
migrations/: base.py  env.py
migrations/versions/: 2024_05_05_1540-ccef02978e66_.py  2024_05_05_1545-9e889ca36fa6_.py  2024_05_05_1600-c1893e5299d0_.py  2024_05_05_1622-30e95078f630_.py  2024_05_07_2350-173fefb40c65_.py  2024_05_08_1154-0c0a52edd910_.py  2024_05_08_1318-0e88e1de1325_.py  2024_05_15_1546-1a466d0935ad_.py  2024_05_15_1548-9e7cdf7a8912_.py  2024_05_17_0124-0be2ae562901_.py  2024_05_17_1319-002c0484eea0_.py  2024_05_17_1559-8bee3d976dab_.py  2024_05_17_1737-7f0c156ec579_.py  2024_05_18_1617-eb6157cba77f_.py  2024_05_22_2116-b15c311dbc5a_.py  2024_05_24_1852-7f4d9357c6a9_.py  2024_05_27_1157-628d3601aec5_.py  2024_05_27_1202-184f45906bba_.py  2024_05_27_1807-c37309ca30d7_.py  2024_05_28_1246-63007d45cf3b_.py  2024_05_28_1327-b48ee1af2c82_.py  2024_05_29_1440-ddd5b6a08a9b_.py  2024_05_30_1624-c8d5fbcc7d81_.py  2024_06_05_1218-bd3016b1c86f_.py  2024_06_06_1148-124d03df1cec_.py  2024_06_06_1447-b8c0bb245e9d_.py  2024_06_06_1518-ea867a467fdf_.py  2024_06_07_1634-e045452f1b4a_.py  2024_06_10_2117-3affb9e7088b_.py  2024_06_10_2316-7d92209f8341_.py  2024_06_11_1109-e998e1e347b9_.py  2024_06_12_1014-8615bb52eb5c_.py  2024_06_12_1239-78c5fe48c41e_.py  2024_06_12_1315-35b69f9b2bd5_.py  2024_06_18_1205-c3fbd2133394_.py  2024_07_23_1232-d67a0895c6b7_.py
parser/: async_parser.py
src/: main.py
src/celery_worker/: tasks.py
src/config/: celery_configs.py
(+155 files in other folders)
