[tool.poetry]
name = "parser"
version = "0.1.0"
description = "My description"
authors = ["Dm1trySereda <dima.sereda.d@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
requests = "^2.31.0"
jinja2 = "^3.1.4"
lxml = "^5.2.2"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.9.5"
celery = "^5.4.0"
redis = "^5.0.4"
sqlalchemy = "^2.0.30"
mysqlclient = "^2.2.4"
pydantic-settings = "^2.2.1"
mysql-connector-python = "^8.4.0"
aiomysql = "^0.2.0"
uvicorn = "^0.29.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
black = "^24.4.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
flake8-variables-names = "^0.0.6"
pep8-naming = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
